# kiwi-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  Makefile  README.ko.md  README.md  llms.txt
.github/workflows/: feature-benchmark.yml
benchmarks/datasets/: swe_textset_v1.tsv  swe_textset_v2.tsv
docs/: benchmark_dataset_spec.ko.md  benchmark_dataset_spec.md  benchmark_defense.ko.md  benchmark_defense.md  kiwipiepy_parity.ko.md  kiwipiepy_parity.md  medium_kiwi_rs_performance_guide_en.md  medium_kiwi_rs_performance_guide_ko.md
examples/: analyze_options.rs  basic.rs  bench_features.rs  bench_glue.rs  bench_tokenize.rs  blocklist_and_pretokenized.rs  builder_custom_words.rs  dump_structural_outputs.rs  morpheme_semantics.rs  native_batch.rs  split_sentences.rs  sw_tokenizer.rs  typo_build.rs  utf16_api.rs
report/: arxiv_draft.tex  references.bib  technical_report.tex
scripts/: bench_features_kiwipiepy.py  bench_kiwipiepy.py  build_swe_textset_v2.py  compare_feature_bench.py  compare_feature_dataset.py  compare_feature_matrix.py  compare_structural_parity.py  install_kiwi.ps1  install_kiwi.sh
skills/kiwi-rs-assistant/: SKILL.md
skills/kiwi-rs-assistant/agents/: openai.yaml
skills/kiwi-rs-assistant/references/: task-to-api.md  troubleshooting.md
src/: bootstrap.rs  config.rs  constants.rs  discovery.rs  error.rs  lib.rs  model.rs  native.rs  runtime.rs  test_support.rs  tests.rs  types.rs
tests/: integration_tests.rs  safety_check.rs
