[package]
name = "kiwi-rs"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
license = "LGPL-3.0-or-later"
description = "Ergonomic Rust bindings for the Kiwi Korean morphological analyzer C API"
readme = "README.md"
repository = "https://github.com/JAICHANGPARK/kiwi-rs"
homepage = "https://github.com/JAICHANGPARK/kiwi-rs"
documentation = "https://docs.rs/kiwi-rs"
keywords = ["korean", "nlp", "morphology", "tokenizer", "ffi"]
categories = ["api-bindings", "text-processing"]

[dependencies]
regex = "1.12.2"
